--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,18 @@
+certifi==2018.4.16
+chardet==3.0.4
 click==6.7
 Flask==1.0.2
 flask-mongoengine==0.9.5
 Flask-WTF==0.14.2
 gunicorn==19.8.1
+idna==2.6
 itsdangerous==0.24
 Jinja2==2.10
 MarkupSafe==1.0
 mongoengine==0.15.0
 pymongo==3.6.1
+requests==2.18.4
 six==1.11.0
+urllib3==1.22
 Werkzeug==0.14.1
 WTForms==2.1
