--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
+atomicwrites==1.2.1
+attrs==18.2.0
 certifi==2018.4.16
 chardet==3.0.4
 click==6.7
@@ -10,7 +12,11 @@ itsdangerous==0.24
 Jinja2==2.10
 MarkupSafe==1.0
 mongoengine==0.15.0
+more-itertools==4.3.0
+pluggy==0.8.0
+py==1.7.0
 pymongo==3.6.1
+pytest==4.0.0
 requests==2.18.4
 six==1.11.0
 urllib3==1.22
