--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,24 @@
 atomicwrites==1.2.1
 attrs==18.2.0
-certifi==2018.4.16
+certifi==2018.10.15
 chardet==3.0.4
-click==6.7
+Click==7.0
 Flask==1.0.2
 flask-mongoengine==0.9.5
 Flask-WTF==0.14.2
-gunicorn==19.8.1
-idna==2.6
-itsdangerous==0.24
+gunicorn==19.9.0
+idna==2.7
+itsdangerous==1.1.0
 Jinja2==2.10
-MarkupSafe==1.0
-mongoengine==0.15.0
+MarkupSafe==1.1.0
+mongoengine==0.16.1
 more-itertools==4.3.0
 pluggy==0.8.0
 py==1.7.0
-pymongo==3.6.1
+pymongo==3.7.2
 pytest==4.0.0
-requests==2.18.4
+requests==2.20.1
 six==1.11.0
-urllib3==1.22
+urllib3==1.24.1
 Werkzeug==0.14.1
-WTForms==2.1
+WTForms==2.2.1
